# SDLShootEmUp

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: definitions.h  draw.h  global.h  init.h  input.h  stage.h  types.h  utils.h
src/: .stage.c.kate-swp  draw.c  global.c  init.c  input.c  main.c  stage.c  utils.c
